--- a/Log_Reg_test.ipynb
+++ b/Log_Reg_test.ipynb
@@ -71,6 +71,27 @@
     "# test the function\n",
     "sigmoid(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''legend:\n",
+    "- y = true/target value --> (can be 0 or 1 only)\n",
+    "- y_hat = the hypotesis (the output values is between 0 and 1) --> Thread on towarddatascience.com\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cost function\n"
+   ]
   }
  ],
  "metadata": {
