--- a/Log_Reg_test.ipynb
+++ b/Log_Reg_test.ipynb
@@ -61,7 +61,7 @@
     "'''The range of inputs is the set of all Real Numbers and the range of outputs is between 0 and 1.\n",
     "    z should increase positive infinity when the output get closer to 1'''\n",
     "\n",
-    "# Sigmoid formula --> 1/(1 + e−t)\n",
+    "# Sigmoid formula -->   1/(1 + e−t)\n",
     "\n",
     "def sigmoid(z):\n",
     "    sig_func = 1/(1 + np.exp(-z))\n",
@@ -86,11 +86,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2231435513142097"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Cost function\n"
+    "# Cost function\n",
+    "\n",
+    "'''We need the cost function to determine the optimal parameters, which will help us to get the perst prediction'''\n",
+    "\n",
+    "# Cost function formula -->     yi log σ(θ>xi) + (1 − yi) log(1 − σ(θ>xi))\n",
+    "\n",
+    "def cost_function(y, y_hat):\n",
+    "    cost = -np.mean(y*(np.log(y_hat)) - (1-y)*np.log(1-y_hat))\n",
+    "    return cost\n",
+    "\n",
+    "\n",
+    "# Test the functio\n",
+    "\n",
+    "cost_function(1, 0.8)\n",
+    "\n"
    ]
   }
  ],
