--- a/Log_Reg_test.ipynb
+++ b/Log_Reg_test.ipynb
@@ -103,7 +103,7 @@
    "source": [
     "# Cost function\n",
     "\n",
-    "'''We need the cost function to determine the optimal parameters, which will help us to get the perst prediction'''\n",
+    "'''We need the cost function to determine the optimal parameters, which will help us to get the best prediction'''\n",
     "\n",
     "# Cost function formula -->     yi log σ(θ>xi) + (1 − yi) log(1 − σ(θ>xi))\n",
     "\n",
