--- a/test_logit.ipynb
+++ b/test_logit.ipynb
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x14ff3e1b430>"
+       "<matplotlib.collections.PathCollection at 0x15a4396d100>"
       ]
      },
      "execution_count": 3,
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,16 +150,10 @@
     }
    ],
    "source": [
-    "# accuracy is the percentages of correct guesses 0-1\n",
     "\n",
-    "finalscores = np.dot(np.hstack((np.ones((simulated_separableish_features.shape[0], 1)),\n",
-    "                                 simulated_separableish_features)), weights)\n",
-    "preds = np.round(our_model.sigmoid(finalscores))\n",
-    "accuracy = (preds == simulated_labels).sum().astype(float) / len(preds)\n",
-    "#accuracy = 0\n",
+    "preds=our_model.accuracy(simulated_separableish_features,simulated_labels)\n",
     "\n",
-    "\n",
-    "print('Accuracy from scratch: {0}'.format((preds == simulated_labels).sum().astype(float) / len(preds)))\n",
+    "print('Accuracy from scratch: {0}'.format(preds))\n",
     "print('Accuracy from sk-learn: {0}'.format(clf.score(simulated_separableish_features, simulated_labels)))"
    ]
   }
